PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/Permission_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Permission Configuration</label>
    <pluralLabel>Permission Configurations</pluralLabel>
</CustomObject>