PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Access_Custom_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Access_Custom_Permissions__c</fullName>
    <inlineHelpText>A semicolon separated list custom permissions granted access to the page. If blank all users have edit access as limited by other security fields. If populated, only users granted at least one of the custom permissions will be able to edit permissions.</inlineHelpText>
    <label>Access Custom Permissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>