PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Admin_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Admin_Profiles__c</fullName>
    <label>Admin Profiles</label>
    <type>TextArea</type>
</CustomField>