PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <label>Columns</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>