PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Contact_Security_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Security_Field__c</fullName>
    <inlineHelpText>A field on the Contact of the current user, that allows the system to determine if the user has permission to make updates to a permission record.</inlineHelpText>
    <label>Contact Security Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>