PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Data_Limit_Warning__c.field-meta.xml
<CustomField>
    <fullName>Data_Limit_Warning__c</fullName>
    <label>Data Limit Warning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>