PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Display_Alert_Icons__c.field-meta.xml
<CustomField>
    <fullName>Display_Alert_Icons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Alert Icons</label>
    <type>Checkbox</type>
</CustomField>