PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Filter_Based_on_Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Filter_Based_on_Primary_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Filter Based on Primary Object</label>
    <type>Checkbox</type>
</CustomField>