PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Header_Angle__c.field-meta.xml
<CustomField>
    <fullName>Header_Angle__c</fullName>
    <label>Header Angle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>