PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>