PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Limit_Pagination__c.field-meta.xml
<CustomField>
    <fullName>Limit_Pagination__c</fullName>
    <defaultValue>150</defaultValue>
    <inlineHelpText>Set the maximum number of permissions to be shown on each page.</inlineHelpText>
    <label>Limit: Pagination</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>