PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Limit_Query__c.field-meta.xml
<CustomField>
    <fullName>Limit_Query__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>Set the limit for query of permissions when initializing the page</inlineHelpText>
    <label>Limit: Query</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>