PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <defaultValue>&quot;Account__c&quot;</defaultValue>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>