PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Partial_Save_Message__c.field-meta.xml
<CustomField>
    <fullName>Partial_Save_Message__c</fullName>
    <label>Partial Save Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>