PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Permission_Filter__c.field-meta.xml
<CustomField>
    <fullName>Permission_Filter__c</fullName>
    <inlineHelpText>Allows for further refinement of the loaded permissions.</inlineHelpText>
    <label>Permission Filter</label>
    <type>TextArea</type>
</CustomField>