PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Permission_Security_Field__c.field-meta.xml
<CustomField>
    <fullName>Permission_Security_Field__c</fullName>
    <label>Permission Security Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>