PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Permission_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type_Filter__c</fullName>
    <inlineHelpText>Provide a well formed where clause to filter the set of permission types displayed for this configuration.</inlineHelpText>
    <label>Permission Type Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>