PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Primary_Junction_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Junction_Object_Type__c</fullName>
    <defaultValue>&quot;Contact&quot;</defaultValue>
    <description>The primary object that will be used for all permission records created</description>
    <label>Primary Junction Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>