PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Related_Data_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Related_Data_Field_Mapping__c</fullName>
    <label>Related Data Field Mapping</label>
    <type>TextArea</type>
</CustomField>