PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Related_Object_Widgets__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Widgets__c</fullName>
    <label>Related Object Widgets</label>
    <type>TextArea</type>
</CustomField>