PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/fields/Save_Mode__c.field-meta.xml
<CustomField>
    <fullName>Save_Mode__c</fullName>
    <label>Save Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Active Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>