PROD-12-18-19/force-app/main/default/objects/Permission_Configuration__mdt/listViews/Configuration_Permission.listView-meta.xml
<ListView>
    <fullName>Configuration_Permission</fullName>
    <columns>MasterLabel</columns>
    <columns>API_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>Parent_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>Configuration Permission</label>
</ListView>